--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,10 +1,7 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
-    branches:
-      - main
-
+    branches: [ main ]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -15,8 +12,9 @@ jobs:
           node-version: '16'
       - run: npm ci
       - run: npm run build
+        env:
+          CI: false            # ← add this line
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: \${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
