--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,20 +1,32 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches: [ main ]
+
+permissions:
+  contents: write   # <-- REQUIRED so github-actions[bot] can push
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 20
+
       - run: npm ci
       - run: npm run build
         env:
-          CI: false            # ← add this line
-      - uses: peaceiris/actions-gh-pages@v3
+          CI: false
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+          publish_branch: gh-pages   # optional; set if you want a specific branch
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
